# media-server-desktop

./: CMakeLists.txt
src/: CMakeLists.txt  api.http  qml.qrc
src/cpp/: ParseRequest.cpp  main.cpp
src/hpp/: ParseRequest.h
src/qml/: app.qml
src/ui/: main.ui
src/window/ChatWindow/: ChatDialog.cpp  ChatDialog.h  chatdialog.ui
src/window/LoginWindow/: LoginWindow.cpp  LoginWindow.h  loginwindow.ui
src/window/MainWindow/: MainWindow.cpp  MainWindow.h  mainwindow.ui
src/window/MessageWindow/: MessageDialog.cpp  MessageDialog.h  messagedialog.ui
src/window/ProxySettingWindow/: ProxySettingDialog.cpp  ProxySettingDialog.h  proxysettingdialog.ui
src/window/SettingsWindow/: SettingsDialog.cpp  SettingsDialog.h  settingsdialog.ui
